# SomeManagements

./: .gitignore  CMakeLists.txt  main.cpp
AStar/: AStar.cpp  AStar.h  AStarMatrix.h  CacheFile.txt  Draw.py  Matrix.h  Matrix.tpp  Path.txt
CellDetect/: CellDetect.cpp  CellDetect.h  CellDetectMatrix.h  CellNode.cpp  CellNode.h
GlobalUtils/: GlobalUtils.h  Matrix.h
Heap/: Heap.h
OtherTask/: DrawDiagram.cpp  DrawDiagram.h
Private/: EventManagement.cpp  LogManagement.cpp  TestA.cpp
Private/AStar/: AStar.cpp  Matrix.cpp
Public/: EventManagement.h  LogManagement.h  Singleton.h  TestA.h
Public/AStar/: Matrix.h
SomeTree/: Tree.cpp  Tree.h  TreeManaement.cpp  TreeManagement.h  TreeNode.cpp  TreeNode.h
Sort/: Sort.cpp  Sort.h  generate_random.py  random_numbers.txt
